# VoxelPirate

./: .gitignore  AGENTS.md  Cargo.toml  DECISIONS.md  README.md
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
specs/: 001-mouse-cannon-targeting.md  002-elaborate-ship-designs.md  003-weapon-variety-and-ship-detail.md  004-living-sea-and-light.md  005-ship-meshing-and-block-textures.md  006-dock-interlude-and-waves.md  007-hud.md
src/: assets.rs  audio.rs  blocks.rs  build.rs  combat.rs  dock.rs  enemy.rs  hud.rs  main.rs  ocean.rs  salvage.rs  selftest.rs  ship.rs
