[package]
name = "voxelpirates"
version = "0.1.0"
edition = "2024"
description = "Voxel pirate game — every ship is a sailing, destructible voxel grid"
repository = "https://github.com/falense/VoxelPirate"

[dependencies]
# `wav` enables rodio's WAV decoder — our sound effects (src/audio.rs) are
# procedurally rendered into in-memory WAVs, and without this feature Bevy
# only ships the Vorbis decoder and panics with `UnrecognizedFormat` the
# first time a sound plays.
bevy = { version = "0.18.1", features = ["wav"] }

# Bevy is unplayably slow in unoptimized debug builds; optimize dependencies
# fully while keeping our own code fast to compile.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
